# BirdSoundClassif

./: .gitattributes  .gitignore  Compute_model_accuracy.ipynb  Exec_Detr.ipynb  README.md  README_DOCKER.md  bird_dict.json  container.def  container_new.def  count_ap_v2_0.csv  count_ap_v2_1.csv  launch_model_0.sh  pyproject.toml  requirements.txt  run_detection.py  setup.py  xeno_canto_utils.py
.remi/: config.yaml  exclude.txt
app/api/: main.py  test.py
app/inference/: main.py
detr/: train.py
detr/nbm_datasets/: image_dataset.py  utils.py
detr/nets/: detr.py  position_encoding.py  transformer.py
docker/api/: main.py  requirements.txt
docker/base/: Dockerfile copy.base  Dockerfile.base  build.sh
docker/inference/: Dockerfile.inference  build.sh  push.sh  requirements.txt  run_bash.sh
model_weights/: args  model_chkpt.pt
models/test/: args
nbm_ia_v2/: ia_model_utils.py  train.py
nbm_ia_v2/nets/: effdet_layers.py  effnet.py  faster_rcnn.py  faster_utils.py  layers.py  nets_utils.py  resnet_backbone.py  vgg_backbone.py
nbm_ia_v2/pytorch_dataset/: image_dataset.py  prepare_dataset.py  utils.py  xeno_canto_utils.py
nbm_model/: nbm_detect.py  run_detection.py  train.py
nbm_model/nbm_datasets/: image_dataset.py  prepare_dataset.py  utils.py
nbm_model/nets/: __init__.py  backbone.py  fpn.py  head.py  layers.py  nbm_model.py  position_encoding.py  self_attention.py
new_XC_ds/: file_ids.json  file_ids_bruits.json  file_ids_save.json
new_XC_ds/anthus_hodgsoni_E/: anthus_hodgsoni#759611.txt
new_XC_ds/athene_noctua/: athene_noctua#433360.txt  athene_noctua#535444.txt  athene_noctua#539630.txt  athene_noctua#539631.txt  athene_noctua#554145.txt  athene_noctua#581782.txt  athene_noctua#604468.txt
new_XC_ds/carduelis_carduelis_A/: carduelis_carduelis#610337.txt
new_XC_ds/carduelis_carduelis_B/: carduelis_carduelis#495511.txt  carduelis_carduelis#631728.txt  carduelis_carduelis#643389.txt  (+3 more)
notebooks/: 1.0_LB_exemple-inference.ipynb  1.0b_LB_exemple-inference_cpu.ipynb  2.0_VB_test-data-preparation.ipynb
xc_utils/: =2.1.0  README.md  pyproject.toml
xeno_canto_utils_nbm/: xeno_canto_utils.py
(+802 files in other folders)
